--- a/index.html
+++ b/index.html
@@ -46,22 +46,22 @@
                 <h3 class="section-title">Pillars of "Bangladesh 2.0"</h3>
                 <div class="flex justify-between align-center box-wrapper">
                     <div class="box">
-                        <img src="assets/card-icon.png" alt="card icon">
+                        <img src="assets/card-icon.png" alt="card icon" class="box-img">
                         <h3 class="box-title">Innovation</h3>
                         <p class="box-description">Encouraging research and the adoption of new technologies across industries.</p>
                     </div>
                     <div class="box">
-                        <img src="assets/card-icon.png" alt="card icon">
+                        <img src="assets/card-icon.png" alt="card icon" class="box-img">
                         <h3 class="box-title">Sustainability</h3>
                         <p class="box-description">Emphasizing eco-friendly initiatives to ensure long-term environmental health.</p>
                     </div>
                     <div class="box">
-                        <img src="assets/card-icon.png" alt="card icon">
+                        <img src="assets/card-icon.png" alt="card icon" class="box-img">
                         <h3 class="box-title">Infrastructure</h3>
-                        <p class="box-description">Developing state-of-the-art transportation, communication, and urban facilities to support economic growth.</p>
+                        <p class="box-description">Developing state-of-the-art transportation,and urban facilities to support economic growth.</p>
                     </div>
                     <div class="box">
-                        <img src="assets/card-icon.png" alt="card icon">
+                        <img src="assets/card-icon.png" alt="card icon" class="box-img">
                         <h3 class="box-title">Empowerment</h3>
                         <p class="box-description">Focusing on uplifting marginalized communities and ensuring equal opportunities for all.</p>
                     </div>
@@ -69,7 +69,35 @@
                 
             </div>
         </section>
-        <!-- pillers of bangladesh section end -->
+        <!-- pillars of bangladesh section end -->
+        <!-- The Vision of Future start  -->
+        <section id="vision-section" class="full-width">
+            <div class="wrapper column">
+               <h3 class="section-title">The Vision of Future</h3>
+               <p>Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.</p>
+               <div class="flex justify-between align-center box-wrapper">
+                    <div class="vision-box vision-box-bg-1">
+                        <img src="assets/card-icon.png" alt="card icon" class="box-img">
+                        <h3 class="box-title">Digital Transformation</h3>
+                        <p class="box-description">Creating a nationwide digital ecosystem to enhance connectivity and access to services for all citizens.</p>
+                        <a href="#" class="vision-btn vision-btn-bg-1">Learn More</a>
+                    </div>
+                    <div class="vision-box vision-box-bg-2">
+                        <img src="assets/card-icon.png" alt="card icon" class="box-img">
+                        <h3 class="box-title">Green Energy</h3>
+                        <p class="box-description">Investments in solar and wind energy to ensure a sustainable and eco-friendly future.</p>
+                        <a href="#" class="vision-btn vision-btn-bg-2">Learn More</a>
+                    </div>
+                    <div class="vision-box vision-box-bg-3">
+                        <img src="assets/card-icon.png" alt="card icon" class="box-img">
+                        <h3 class="box-title">Modern Infrastructure</h3>
+                        <p class="box-description">Building state-of-the-art infrastructure to support economic growth and global competitiveness.</p>
+                        <a href="#" class="vision-btn vision-btn-bg-3">Learn More</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- The Vision of Future end -->
     </main>
      <!-- main content end -->
 </body>
