your opinion matters add

--- a/index.html
+++ b/index.html
@@ -95,9 +95,77 @@
                         <a href="#" class="vision-btn vision-btn-bg-3">Learn More</a>
                     </div>
                 </div>
+                <div class="flex column quote-wrap">
+                     <p class="quote-p">
+                        "Dr. Muhammad Yunus believes in the potential of the poor to create a world free from poverty. He famously said, 'The poor themselves can create a poverty-free world... all we have to do is to free them from the chains that we have put around them.' Through microfinance and institutions like Grameen Bank, he demonstrated that small, collateral-free loans could empower impoverished individuals to start businesses and achieve financial independence. This approach not only alleviates poverty but also restores dignity and fosters self-reliance. Dr. Yunus's vision encourages global social justice and economic empowerment."
+                     <h3 class="name mt-4">Dr. Muhammad Yunus</h3>
+                     <h5 class="designation mt-4">Chief Adviser of the People's Republic of Bangladesh</h5>
+                </div>
             </div>
         </section>
         <!-- The Vision of Future end -->
+      <!-- Opinion Matters section start  -->
+      <section id="opinion" class="full-width">
+        <div class="wrapper column">
+            <h3 class="section-title">Your Opinion Matters</h3>
+            <div class="question-wrap flex column">
+                <div class="question-header flex row justify-between p-24">
+                   <div class="question-left">
+                    <h3>Questions</h3>
+                   </div>
+                   <div class="question-right">
+                     <h3>Select Your Opinion</h3>
+                   </div>
+                </div>
+                <div class="flex row">
+                    <div class="question-body-left p-24 flex align-center">
+                        <p>Do you believe Bangladesh is on the right path toward becoming a developed nation?</p>
+                    </div>
+                    <div class="question-body-right p-24 flex align-center">
+                        <a href="#" class="btn flex justify-center align-center">
+                           Yes, I Agree
+                            <span class="icon flex align-center">
+                                <svg width="19" height="19" viewBox="0 0 19 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M5 7.25L9.5 11.75L14 7.25" stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                </svg>        
+                            </span>
+                        </a>
+                    </div>
+                </div>
+                <div class="flex row">
+                    <div class="question-body-left p-24 flex align-center">
+                        <p>Do you believe that Bangladesh is on track to achieve developed nation status in the near future?</p>
+                    </div>
+                    <div class="question-body-right p-24 flex align-center">
+                        <a href="#" class="btn flex justify-center align-center">
+                           Yes, I Agree
+                            <span class="icon flex align-center">
+                                <svg width="19" height="19" viewBox="0 0 19 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M5 7.25L9.5 11.75L14 7.25" stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                </svg>        
+                            </span>
+                        </a>
+                    </div>
+                </div>
+                <div class="flex row">
+                    <div class="question-body-left p-24 flex align-center">
+                        <p>Do you agree that Bangladesh is making significant progress towards becoming a developed nation?</p>
+                    </div>
+                    <div class="question-body-right p-24 flex align-center">
+                        <a href="#" class="btn flex justify-center align-center">
+                           Yes, I Agree
+                            <span class="icon flex align-center">
+                                <svg width="19" height="19" viewBox="0 0 19 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M5 7.25L9.5 11.75L14 7.25" stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                </svg>        
+                            </span>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+      </section>
+      <!-- Opinion Matters section end -->
     </main>
      <!-- main content end -->
 </body>
