news section add

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <h2 class="main-title mb-16">Idea , innovation ,
                         vision and challenges in New Bangladesh.
                     </h2>
-                    <a href="#" class="primary-button">
+                    <a href="#" class="primary-button py-17 px-34">
                         Explore New Bangladesh
                     </a>
                 </div>
@@ -166,6 +166,84 @@
         </div>
       </section>
       <!-- Opinion Matters section end -->
+      <!-- Recent News section start  -->
+      <section id="recent-news" class="full-width">
+         <div class="wrapper column">
+            <h3 class="section-title">Recent News</h3>
+            <p>Bangladesh 2.0 aspires to transform the nation’s path by integrating advanced technology, fostering inclusive growth, and prioritizing sustainability. Through initiatives in renewable energy, digital innovation, and strong infrastructure, the country aims to emerge as a global exemplar of development.</p>
+            <!-- 1st news wrapper start  -->
+            <div class="flex news-wrapper">
+                <div class="news-left">
+                    <img src="./assets/satelite.png" alt="satelite">
+                </div>
+                <div class="news-right flex column justify-center">
+                    <h3>Bangladesh Launches New Satellite</h3>
+                    <img src="./assets/al-jazeera.png" alt="al-jazeera">
+                    <div class="date flex align-center">
+                        <span class="d">Date: 05/01/2025</span> 
+                        <span class="t">Time: 10.25 PM</span>
+                    </div>
+                    <p>
+                        Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we, with a certain degree of justification, be able to speak of humankind as civilized
+                    </p>
+                    <div>
+                        <a href="#" class="primary-button py-13 px-26">
+                            Read More
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <!-- 1st news wrapper end  -->
+            <!-- 2nd news wrapper start -->
+            <div class="flex news-wrapper new-w-2">
+                <div class="news-left">
+                    <img src="./assets/satelite.png" alt="satelite">
+                </div>
+                <div class="news-right flex column justify-center">
+                    <h3>Bangladesh Launches New Satellite</h3>
+                    <img src="./assets/al-jazeera.png" alt="al-jazeera">
+                    <div class="date flex align-center">
+                        <span class="d">Date: 05/01/2025</span> 
+                        <span class="t">Time: 10.25 PM</span>
+                    </div>
+                    <p>
+                        Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we, with a certain degree of justification, be able to speak of humankind as civilized
+                    </p>
+                    <div>
+                        <a href="#" class="primary-button py-13 px-26">
+                            Read More
+                        </a>
+                    </div>
+                </div>
+            </div>
+           <!-- 2nd news wrapper end -->
+            <!-- 3rd news wrapper start  -->
+            <div class="flex news-wrapper">
+                <div class="news-left">
+                    <img src="./assets/satelite.png" alt="satelite">
+                </div>
+                <div class="news-right flex column justify-center">
+                    <h3>Bangladesh Launches New Satellite</h3>
+                    <img src="./assets/al-jazeera.png" alt="al-jazeera">
+                    <div class="date flex align-center">
+                        <span class="d">Date: 05/01/2025</span> 
+                        <span class="t">Time: 10.25 PM</span>
+                    </div>
+                    <p>
+                        Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we, with a certain degree of justification, be able to speak of humankind as civilized
+                    </p>
+                    <div>
+                        <a href="#" class="primary-button py-13 px-26">
+                            Read More
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <!-- 3rd news wrapper end -->
+
+         </div>
+      </section>
+      <!-- Recent News section end -->
     </main>
      <!-- main content end -->
 </body>
