--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <!-- pillars of bangladesh section start  -->
         <section id="pillars-seciton" class="full-width">
             <div class="wrapper column">
-                <h3 class="section-title">Pillars of "Bangladesh 2.0"</h3>
+                <h3 class="section-title mb-32">Pillars of "Bangladesh 2.0"</h3>
                 <div class="flex justify-between align-center box-wrapper">
                     <div class="box">
                         <img src="assets/card-icon.png" alt="card icon" class="box-img">
@@ -73,8 +73,8 @@
         <!-- The Vision of Future start  -->
         <section id="vision-section" class="full-width">
             <div class="wrapper column">
-               <h3 class="section-title">The Vision of Future</h3>
-               <p>Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.</p>
+               <h3 class="section-title mb-32">The Vision of Future</h3>
+               <p class="mb-32">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.</p>
                <div class="flex justify-between align-center box-wrapper">
                     <div class="vision-box vision-box-bg-1">
                         <img src="assets/card-icon.png" alt="card icon" class="box-img">
@@ -96,7 +96,7 @@
                     </div>
                 </div>
                 <div class="flex column quote-wrap">
-                     <p class="quote-p">
+                     <p class="quote-p mb-32">
                         "Dr. Muhammad Yunus believes in the potential of the poor to create a world free from poverty. He famously said, 'The poor themselves can create a poverty-free world... all we have to do is to free them from the chains that we have put around them.' Through microfinance and institutions like Grameen Bank, he demonstrated that small, collateral-free loans could empower impoverished individuals to start businesses and achieve financial independence. This approach not only alleviates poverty but also restores dignity and fosters self-reliance. Dr. Yunus's vision encourages global social justice and economic empowerment."
                      <h3 class="name mt-4">Dr. Muhammad Yunus</h3>
                      <h5 class="designation mt-4">Chief Adviser of the People's Republic of Bangladesh</h5>
@@ -107,7 +107,7 @@
       <!-- Opinion Matters section start  -->
       <section id="opinion" class="full-width">
         <div class="wrapper column">
-            <h3 class="section-title">Your Opinion Matters</h3>
+            <h3 class="section-title mb-32">Your Opinion Matters</h3>
             <div class="question-wrap flex column">
                 <div class="question-header flex row justify-between p-24">
                    <div class="question-left">
@@ -169,8 +169,8 @@
       <!-- Recent News section start  -->
       <section id="recent-news" class="full-width">
          <div class="wrapper column">
-            <h3 class="section-title">Recent News</h3>
-            <p>Bangladesh 2.0 aspires to transform the nation’s path by integrating advanced technology, fostering inclusive growth, and prioritizing sustainability. Through initiatives in renewable energy, digital innovation, and strong infrastructure, the country aims to emerge as a global exemplar of development.</p>
+            <h3 class="section-title mb-32">Recent News</h3>
+            <p class="mb-32">Bangladesh 2.0 aspires to transform the nation’s path by integrating advanced technology, fostering inclusive growth, and prioritizing sustainability. Through initiatives in renewable energy, digital innovation, and strong infrastructure, the country aims to emerge as a global exemplar of development.</p>
             <!-- 1st news wrapper start  -->
             <div class="flex news-wrapper">
                 <div class="news-left">
@@ -183,7 +183,7 @@
                         <span class="d">Date: 05/01/2025</span> 
                         <span class="t">Time: 10.25 PM</span>
                     </div>
-                    <p>
+                    <p class="mb-32">
                         Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we, with a certain degree of justification, be able to speak of humankind as civilized
                     </p>
                     <div>
@@ -200,14 +200,14 @@
                     <img src="./assets/satelite.png" alt="satelite">
                 </div>
                 <div class="news-right flex column justify-center">
-                    <h3>Bangladesh Launches New Satellite</h3>
+                    <h3>Bangladesh Launches Cutting-Edge Satellite</h3>
                     <img src="./assets/al-jazeera.png" alt="al-jazeera">
                     <div class="date flex align-center">
-                        <span class="d">Date: 05/01/2025</span> 
-                        <span class="t">Time: 10.25 PM</span>
+                        <span class="d">Date: 06/01/2025</span> 
+                        <span class="t">Time: 11.25 PM</span>
                     </div>
-                    <p>
-                        Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we, with a certain degree of justification, be able to speak of humankind as civilized
+                    <p class="mb-32">
+                        We can only claim to be civilized once all people and nations acknowledge and uphold the obligation to create and maintain decent living conditions for everyone.
                     </p>
                     <div>
                         <a href="#" class="primary-button py-13 px-26">
@@ -223,14 +223,14 @@
                     <img src="./assets/satelite.png" alt="satelite">
                 </div>
                 <div class="news-right flex column justify-center">
-                    <h3>Bangladesh Launches New Satellite</h3>
+                    <h3>Bangladesh's New Satellite Milestone</h3>
                     <img src="./assets/al-jazeera.png" alt="al-jazeera">
                     <div class="date flex align-center">
-                        <span class="d">Date: 05/01/2025</span> 
-                        <span class="t">Time: 10.25 PM</span>
+                        <span class="d">Date: 07/01/2025</span> 
+                        <span class="t">Time: 12.25 PM</span>
                     </div>
-                    <p>
-                        Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we, with a certain degree of justification, be able to speak of humankind as civilized
+                    <p class="mb-32">
+                        Humankind can only be considered civilized when the creation and maintenance of decent living conditions for all people are recognized as a universal obligation.
                     </p>
                     <div>
                         <a href="#" class="primary-button py-13 px-26">
@@ -244,6 +244,41 @@
          </div>
       </section>
       <!-- Recent News section end -->
+
+      <!-- donate section start  -->
+      <section id="donate" class="full-width">
+        <div class="wrapper column px-88">
+            <h3 class="section-title text-center mb-24">Donate Today</h3>
+            <p class="text-center mb-32">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure.</p>
+            <div class="donate-wrapper mb-32 flex justify-center align-center">
+                <div class="donate-box flex justify-center align-center">
+                    <span>100 Taka</span>
+                </div>
+                <div class="donate-box flex justify-center align-center active">
+                    <span>200 Taka</span>
+                </div>
+                <div class="donate-box flex justify-center align-center">
+                    <span>500 Taka</span>
+                </div>
+                <div class="donate-box flex justify-center align-center">
+                    <span>1000 Taka</span>
+                </div>
+            </div>
+
+            <!-- amount input start  -->
+            <div class="input-box mb-32">
+                <input class="px-40 py-18 text-center" type="text" placeholder="Other Amount (Taka)">
+            </div>
+            <div class="amoutn-btn text-center">
+                <a href="#" class="primary-button py-17 px-34">
+                    Done Now
+                </a>
+            </div>
+            <!-- amount input end -->
+
+        </div>
+      </section>
+      <!-- donate section end -->
     </main>
      <!-- main content end -->
 </body>
