--- a/index.html
+++ b/index.html
@@ -279,7 +279,40 @@
         </div>
       </section>
       <!-- donate section end -->
+      <!-- newsletter section start  -->
+      <section id="newsletter" class="full-width">
+         <div class="wrapper">
+            <div class="newsletter-wrap flex column justify-center align-center">
+                 <div class="newsletter-content">
+                    <h3 class="section-title text-center mb-16">Subscribe Newsletter</h3>
+                    <p class="text-center mb-32">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth.</p>
+                    <div class="newsletter-input-wrap flex">
+                        <div class="newsletter-input flex justify-start align-center">
+                            <input class="py-18 px-40" type="text" placeholder="Enter your email here">
+                        </div>
+                        <button class="subscribe-btn">Subscribe</button>
+                    </div>
+                    <p class="text-center">We promise not to spam you!</p>
+                 </div>
+            </div>
+         </div>
+      </section>
+      <!-- newsletter section end  -->
     </main>
      <!-- main content end -->
+
+    <!-- footer start  -->
+    <footer id="footer" class="full-width">
+        <div class="wrapper column  px-88">
+               <h3 class="footer-title text-center mb-32">Bangladesh 2.0</h3>
+               <div class="footer-social pt-32 flex justify-center align-center">
+                  <a href="#"><img src="./assets/facebook.png" alt="facebook"></a>
+                  <a href="#" class="px-16"><img src="./assets/instagram.png" alt="instagram"></a>
+                  <a href="#"><img src="./assets/x.png" alt="x"></a>
+               </div>
+               <p class="text-center pt-32">developed by <span class="copy">mobin mostafa</span></p>
+        </div>
+    </footer>
+    <!-- footer end -->
 </body>
 </html>
